renamed reporter and removed redundant reporters

--- a/modules_app/cpTesting/views/_includes/css/html.css
+++ b/modules_app/cpTesting/views/_includes/css/html.css
@@ -4,10 +4,12 @@
 	line-height: 14px;
 }
 #tb-results * {
-	overflow-wrap: break-word;
-	word-wrap: break-word;
-	-ms-word-break: break-all;
-	word-break: break-word;
+	/* force word wrap
+		overflow-wrap: break-word;
+		word-wrap: break-word;
+		-ms-word-break: break-all;
+		word-break: break-word;
+	*/
 	-ms-hyphens: auto;
 	-moz-hyphens: auto;
 	-webkit-hyphens: auto;
