--- a/views/_includes/css/application-custom.css
+++ b/views/_includes/css/application-custom.css
@@ -1,9 +1,11 @@
 body{ padding-top: 50px; }
 body * {
-	overflow-wrap: break-word;
-	word-wrap: break-word;
-	-ms-word-break: break-all;
-	word-break: break-word;
+	/* force word wrap
+		overflow-wrap: break-word;
+		word-wrap: break-word;
+		-ms-word-break: break-all;
+		word-break: break-word;
+	*/
 	-ms-hyphens: auto;
 	-moz-hyphens: auto;
 	-webkit-hyphens: auto;
