--- a/modules_app/cpTesting/views/_includes/css/html.css
+++ b/modules_app/cpTesting/views/_includes/css/html.css
@@ -2,6 +2,7 @@
 	font-family:  Monaco, "Lucida Console", monospace;
 	font-size: 10.5px;
 	line-height: 14px;
+	min-height: 155px
 }
 #tb-results * {
 	/* force word wrap
@@ -47,3 +48,48 @@
 #tb-results #globalStats { background-color: #dceef4 }
 #tb-results .specStatus, #tb-results .reset { cursor:pointer; }
 #tb-results .suite { margin-left: -1px; }
+
+#tb-runner #tb-left{ width: 17%; margin-right: 10px; margin-top: 0px; height: 135px; float:left;}
+#tb-runner #tb-right{ width: 80%; }
+#tb-runner fieldset{ padding: 10px; margin: 10px 0px; border: 1px dotted gray;}
+#tb-runner input{ padding: 5px; margin: 2px 0px;}
+#tb-runner .btn-red {
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #f24537), color-stop(1, #c62d1f) );
+	background:-moz-linear-gradient( center top, #f24537 5%, #c62d1f 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f24537', endColorstr='#c62d1f');
+	background-color:#f24537;
+	-webkit-border-top-left-radius:5px;
+	-moz-border-radius-topleft:5px;
+	border-top-left-radius:5px;
+	-webkit-border-top-right-radius:5px;
+	-moz-border-radius-topright:5px;
+	border-top-right-radius:5px;
+	-webkit-border-bottom-right-radius:5px;
+	-moz-border-radius-bottomright:5px;
+	border-bottom-right-radius:5px;
+	-webkit-border-bottom-left-radius:5px;
+	-moz-border-radius-bottomleft:5px;
+	border-bottom-left-radius:5px;
+	text-indent:1.31px;
+	border:1px solid #d02718;
+	display:inline-block;
+	color:#ffffff;
+	font-weight:bold;
+	font-style:normal;
+	padding: 2px 5px;
+	margin: 2px 0px;
+	text-decoration:none;
+	text-align:center;
+	cursor: pointer;
+}
+#tb-runner .btn-red:hover {
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #c62d1f), color-stop(1, #f24537) );
+	background:-moz-linear-gradient( center top, #c62d1f 5%, #f24537 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#c62d1f', endColorstr='#f24537');
+	background-color:#c62d1f;
+}
+#tb-runner .btn-red:active {
+	position:relative;
+	top:1px;
+}
+#tb-results{ padding: 10px;}
