made title reflect current tool and removed titles

--- a/modules_app/cpTesting/views/_includes/css/testbox.css
+++ b/modules_app/cpTesting/views/_includes/css/testbox.css
@@ -56,6 +56,7 @@
 .btn-group { margin-right:16px; }
 .ctl-dt-display-dir { text-transform:capitalize; }
 .ctl-dt-display-test {}
+.ctl-dt-test-header { margin:20px 0 0 0; }
 
 code{ padding: 2px 4px; color: #d14; white-space: nowrap; background-color: #f7f7f9; border: 1px solid #e1e1e8;}
 
